--- a/src/components/DelegateCard/styles.module.css
+++ b/src/components/DelegateCard/styles.module.css
@@ -9,3 +9,17 @@
   max-height: 3em;
   min-height: 3em;
 }
+
+.card {
+  width: 100%;
+}
+
+.card:hover {
+  border: 1px solid var(--mui-palette-secondary-main);
+  background-color: var(--mui-palette-secondary-background);
+}
+
+[data-theme='dark'] .card:hover {
+  border: 1px solid var(--mui-palette-primary-main);
+  background-color: var(--mui-palette-background-light);
+}
