--- a/src/components/EducationSeries/steps/SafeToken/styles.module.css
+++ b/src/components/EducationSeries/steps/SafeToken/styles.module.css
@@ -15,6 +15,16 @@
   background-color: var(--mui-palette-background-light);
 }
 
+.accordion:hover {
+  border: 1px solid var(--mui-palette-secondary-main);
+  background-color: var(--mui-palette-secondary-background);
+}
+
+[data-theme='dark'] .accordion:hover {
+  border: 1px solid var(--mui-palette-primary-main);
+  background-color: var(--mui-palette-background-light);
+}
+
 .details {
   padding-top: 0;
   background-color: var(--mui-palette-background-light);
