--- a/src/components/OverviewLinks/styles.module.css
+++ b/src/components/OverviewLinks/styles.module.css
@@ -9,6 +9,16 @@
   cursor: pointer;
 }
 
+.card:hover {
+  outline: 1px solid var(--mui-palette-secondary-main);
+  background-color: var(--mui-palette-secondary-background);
+}
+
+[data-theme='dark'] .card:hover {
+  outline: 1px solid var(--mui-palette-primary-main);
+  background-color: var(--mui-palette-background-light);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
