--- a/src/components/ChainSwitcher/styles.module.css
+++ b/src/components/ChainSwitcher/styles.module.css
@@ -2,5 +2,17 @@
   width: 0.8em;
   height: 0.8em;
   border-radius: 50%;
-  margin-left: 0.2em;
+  margin-right: 0.3em;
+}
+
+@media (max-width: 600px) {
+  .button {
+    padding-left: 12px;
+    padding-right: 12px;
+    font-size: 12px;
+  }
+
+  .circle {
+    display: none;
+  }
 }
