fix: adjust boost function

--- a/src/components/TockenUnlocking/styles.module.css
+++ b/src/components/TockenUnlocking/styles.module.css
@@ -5,6 +5,20 @@
   color: var(--mui-palette-secondary-main);
 }
 
+.boostInfoBox {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+}
+
+.bordered {
+  border-radius: 6px;
+  border: var(--mui-palette-border-light) 1px solid;
+}
+
 .doubleTile {
   position: absolute;
   bottom: 15px;
