fix: Center contenet

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,6 +4,10 @@
   align-items: center;
   border-radius: 0 !important;
   border-bottom: 1px solid var(--mui-palette-border-light);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .wallet {
