--- a/src/components/ConnectWallet/styles.module.css
+++ b/src/components/ConnectWallet/styles.module.css
@@ -1,9 +1,9 @@
 .milesReceipt {
-  margin-top: 20%;
   width: 90%;
   height: 537px;
   display: flex;
   overflow: hidden;
+  margin: 16px auto;
 }
 
 .leftReceipt,
@@ -29,9 +29,10 @@
 
 .rightReceipt {
   width: 388px;
+  position: relative;
 }
 
 .barcode {
   position: absolute;
-  right: 10%;
+  right: 0;
 }
