create component for responsive accordion container

--- a/src/components/NavTabs/styles.module.css
+++ b/src/components/NavTabs/styles.module.css
@@ -39,3 +39,14 @@
   text-transform: none;
   padding-bottom: 6px;
 }
+
+@media (max-width: 599px) {
+  .tabs span {
+    flex: 1;
+    min-width: fit-content;
+  }
+
+  .tab {
+    width: 100%;
+  }
+}
