--- a/src/components/TokenLocking/styles.module.css
+++ b/src/components/TokenLocking/styles.module.css
@@ -260,21 +260,24 @@
   background: radial-gradient(41.34% 41.34% at 50% 50%, #ff8061 0%, rgba(255, 128, 97, 0) 82.5%);
 }
 
-.activityRewardsAccordion :global .MuiAccordionSummary-content {
-  margin: auto;
-  height: 64px;
+.lockingHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.activityRewardsAccordion :global .Mui-expanded.MuiAccordionSummary-root {
-  border-bottom: 1px solid var(--mui-palette-border-light);
-}
-
-.activityRewardsAccordion :global .MuiAccordionDetails-root {
-  padding: 0;
-}
-
-@media (max-width: 1199px) {
+@media (max-width: 599px) {
   .activityRewards {
     order: -1;
+  }
+
+  .pageTitle {
+    order: -2;
+    display: none;
+  }
+
+  .lockingHeader {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
