--- a/src/components/PageLayout/styles.module.css
+++ b/src/components/PageLayout/styles.module.css
@@ -1,16 +1,18 @@
 .container {
-  width: 1344px;
+  width: 70vw;
   position: relative;
   margin: auto;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1600px) {
   .container {
-    width: 100%;
-    height: 100%;
+    width: 90vw;
   }
+}
 
-  .tiles {
-    display: none;
+@media (max-width: 899px) {
+  .container {
+    height: 100%;
+    width: 100%;
   }
 }
