--- a/src/components/PageLayout/styles.module.css
+++ b/src/components/PageLayout/styles.module.css
@@ -2,6 +2,9 @@
   width: 70vw;
   position: relative;
   margin: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media (max-width: 1600px) {
