--- a/src/components/TokenLocking/styles.module.css
+++ b/src/components/TokenLocking/styles.module.css
@@ -277,6 +277,18 @@
   pointer-events: none;
 }
 
+.sidebarGradientBackground {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  opacity: 0.3;
+  z-index: 1;
+  top: 700px;
+  left: 50px;
+  background: radial-gradient(41.34% 41.34% at 50% 50%, rgba(41, 182, 246, 0.5) 0%, rgba(18, 255, 128, 0) 82.5%);
+  pointer-events: none;
+}
+
 .unlockGradient {
   background: radial-gradient(41.34% 41.34% at 50% 50%, #ff8061 0%, rgba(255, 128, 97, 0) 82.5%);
 }
