--- a/src/components/PageLayout/styles.module.css
+++ b/src/components/PageLayout/styles.module.css
@@ -1,15 +1,30 @@
 .container {
-  width: 70vw;
-  position: relative;
-  margin: auto;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
+.navigation {
+  width: 100%;
+  padding-left: 15vw;
+  padding-right: 15vw;
+  border-bottom: 1px solid #303033;
+}
+
+.pageContent {
+  width: 70vw;
+  position: relative;
+  margin: auto;
+}
+
 @media (max-width: 1600px) {
-  .container {
+  .pageContent {
     width: 90vw;
+  }
+  .navigation {
+    padding-left: 5vw;
+    padding-right: 5vw;
   }
 }
 
@@ -17,5 +32,11 @@
   .container {
     height: 100%;
     width: 100%;
+  }
+  .pageContent {
+    width: 100%;
+  }
+  .navigation {
+    padding: 0;
   }
 }
