--- a/src/components/Points/styles.module.css
+++ b/src/components/Points/styles.module.css
@@ -19,11 +19,35 @@
   pointer-events: none;
 }
 
-.comingSoon {
-  background-color: #303033;
+.chipSoon {
+  background-color: #696669;
+  color: var(--mui-palette-background-paper);
   border-radius: 4px;
   padding: 4px 8px;
   margin-left: 8px;
   border: none;
   font-weight: 400;
+  cursor: pointer;
+}
+
+.chipFinished {
+  background-color: #a1a3a7;
+  color: var(--mui-palette-background-paper);
+  border-radius: 4px;
+  padding: 4px 8px;
+  margin-left: 8px;
+  border: none;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.chipActive {
+  background-color: var(--mui-palette-primary-main);
+  color: var(--mui-palette-background-paper);
+  border-radius: 4px;
+  padding: 4px 8px;
+  margin-left: 8px;
+  border: none;
+  font-weight: 400;
+  cursor: pointer;
 }
