--- a/src/components/Points/styles.module.css
+++ b/src/components/Points/styles.module.css
@@ -51,3 +51,15 @@
 .progressBar {
   background: none;
 }
+
+.prizePoolBox {
+  border-radius: 6px;
+  border: 1px solid var(--mui-palette-border-light);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  margin-top: 32px;
+  padding: 16px 0px;
+}
